fixing dark mode icon size issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -30,7 +30,7 @@ body {
 /* header styles */
 header div {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     column-gap: 8%;
     align-items: center;
     justify-content: center;
